tdf#97301: Return silently when no document is loaded

Change-Id: Id6cf77ee7597fb992a306649c2f2a3639bf6dad8
(cherry picked from commit f01bac5cc2b54b6df731b45c46187fec12515b46)