libreofficekit/source/gtk/lokdocview.cxx
@@ -2716,6 +2716,9 @@ lok_doc_view_set_zoom (LOKDocView* pDocView, float fZoom)
     LOKDocViewPrivate& priv = getPrivate(pDocView);
     GError* error = nullptr;
 
+    if (!priv->m_pDocument)
+        return;
+
     // Clamp the input value in [MIN_ZOOM, MAX_ZOOM]
     fZoom = fZoom < MIN_ZOOM ? MIN_ZOOM : fZoom;
     fZoom = fZoom > MAX_ZOOM ? MAX_ZOOM : fZoom;
